--- a/client/src/CSS/scss_partials/home/account/_accountSidebarEditAppearance.scss
+++ b/client/src/CSS/scss_partials/home/account/_accountSidebarEditAppearance.scss
@@ -48,7 +48,7 @@
 	}
 
 	.content-container__toggle-switch-centering-container {
-		width: v.$basic-toggle-switch-width;
+		width: v.$toggle-switch-width;
 		margin: 0 auto;
 	}
 
