--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemView.scss
@@ -5,7 +5,7 @@
 .js-get-item-view-component {
 	.item-content-container {
 		position: fixed;
-		top: v.$list-item-view-top;
+		top: v.$item-view-top;
 		left: 0px;
 		// Height and width values were found through trial and error
 		// ...to make modal resize (using js) look less jumpy
@@ -31,18 +31,18 @@
 	}
 
 	.name-completed-color {
-		color: v.$status-green;
+		color: v.$common-completed-color;
 	}
 
 	.name-completed-icon {
 		margin-right: 5px;
-		color: v.$status-green;
+		color: v.$common-completed-color;
 	}
 
 	.item-creation-date {
 		margin: 5px;
 		text-align: center;
-		font-size: v.$slightly-larger-font-size;
+		font-size: v.$common-slightly-larger-font-size;
 	}
 
 	// Pairs item-boxs together
@@ -81,11 +81,11 @@
 	}
 
 	.item-box--desciption-info-height {
-		height: v.$edit-item-description-info-item-box-height;
+		height: v.$item-view-edit-item-description-info-item-box-height;
 	}
 
-	.item-box--project-bugs-stats-height {
-		height: v.$edit-item-project-bugs-stats-item-box-height;
+	.item-box--bugs-stats-height {
+		height: v.$item-view-bugs-stats-item-box-height;
 	}
 
 	// Used in ItemViewEditInfo to calculate description size using JS
@@ -148,7 +148,7 @@
 		outline: none;
 		border: 1px solid
 			v.$mode-item-view-form-input-border-color-light;
-		border-radius: v.$form-input-border-radius;
+		border-radius: v.$common-form-input-border-radius;
 		background-color: v.$mode-item-view-form-input-background-color-light;
 		padding: 4px 8px 4px 8px;
 		height: 180px;
@@ -159,7 +159,7 @@
 		resize: none;
 
 		&:focus {
-			border-color: v.$default-theme-mode-focus-border-color;
+			border-color: v.$default-theme-common-mode-focus-border-color;
 		}
 	}
 
