--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewEditItemInfo.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewEditItemInfo.scss
@@ -7,7 +7,7 @@
 	.name-centering-container {
 		position: relative;
 		margin: 20px 0px 9px 0px;
-		height: v.$edit-item-name-centering-container-height;
+		height: v.$item-view-edit-item-name-centering-container-height;
 		width: 100%;
 		text-align: center;
 	}
@@ -15,24 +15,24 @@
 	.name-centering-container__form-name-input {
 		@include m.dead-center;
 		outline: none;
-		border: v.$edit-item-name-input-border-width solid v.$mode-item-view-form-input-border-color-light;
-		border-right: v.$edit-item-name-input-border-width dotted v.$gray-light-level-10;
-		border-radius: v.$form-input-border-radius 0 0 v.$form-input-border-radius;
+		border: v.$item-view-edit-item-name-input-border-width solid v.$mode-item-view-form-input-border-color-light;
+		border-right: v.$item-view-edit-item-name-input-border-width dotted v.$gray-light-level-10;
+		border-radius: v.$common-form-input-border-radius 0 0 v.$common-form-input-border-radius;
 		background-color: v.$mode-item-view-form-input-background-color-light;
-		padding: v.$edit-item-name-input-padding;
-		height: v.$edit-item-name-input-height;
-		width: v.$edit-item-name-input-width;
+		padding: v.$item-view-edit-item-name-input-padding;
+		height: v.$item-view-edit-item-name-input-height;
+		width: v.$item-view-edit-item-name-input-width;
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: v.$item-view-name-font-size;
 		font-weight: bold;
 		text-align: center;
 
 		&:focus {
-			border-color: v.$default-theme-mode-focus-border-color;
+			border-color: v.$default-theme-common-mode-focus-border-color;
 		}
 
 		&:focus + .name-centering-container__char-count-centering-container {
-			border-color: v.$default-theme-mode-focus-border-color;
+			border-color: v.$default-theme-common-mode-focus-border-color;
 		}
 	}
 
@@ -40,36 +40,36 @@
 		@include m.dead-center;
 
 		// Margin-right does nothing so using margin-left but making the value negative
-		margin-left: -(v.$edit-item-name-input-width / 2) - v.$edit-item-name-input-border-width -
-			v.$edit-item-name-input-padding - (v.$edit-item-name-char-counter-container-width / 2);
-		height: v.$edit-item-name-centering-container-height;
-		width: v.$edit-item-name-char-counter-container-width;
+		margin-left: -(v.$item-view-edit-item-name-input-width / 2) - v.$item-view-edit-item-name-input-border-width -
+			v.$item-view-edit-item-name-input-padding - (v.$item-view-edit-item-name-char-counter-container-width / 2);
+		height: v.$item-view-edit-item-name-centering-container-height;
+		width: v.$item-view-edit-item-name-char-counter-container-width;
 	}
 
 	.name-centering-container__completed-icon-centering-container__icon {
 		@include m.dead-center;
 
-		color: v.$status-green;
+		color: v.$common-completed-color;
 		font-size: v.$item-view-name-font-size;
 	}
 
 	.name-centering-container__char-count-centering-container {
 		@include m.dead-center;
 
-		margin-left: (v.$edit-item-name-input-width / 2) + v.$edit-item-name-input-border-width +
-			v.$edit-item-name-input-padding + (v.$edit-item-name-char-counter-container-width / 2);
-		border: v.$edit-item-name-input-border-width solid v.$mode-item-view-form-input-border-color-light;
+		margin-left: (v.$item-view-edit-item-name-input-width / 2) + v.$item-view-edit-item-name-input-border-width +
+			v.$item-view-edit-item-name-input-padding + (v.$item-view-edit-item-name-char-counter-container-width / 2);
+		border: v.$item-view-edit-item-name-input-border-width solid v.$mode-item-view-form-input-border-color-light;
 		border-left: none;
-		border-radius: 0 v.$form-input-border-radius v.$form-input-border-radius 0;
-		height: v.$edit-item-name-centering-container-height - (v.$edit-item-name-input-border-width * 2);
-		width: v.$edit-item-name-char-counter-container-width;
+		border-radius: 0 v.$common-form-input-border-radius v.$common-form-input-border-radius 0;
+		height: v.$item-view-edit-item-name-centering-container-height - (v.$item-view-edit-item-name-input-border-width * 2);
+		width: v.$item-view-edit-item-name-char-counter-container-width;
 	}
 
 	// This character counter is only for name in ItemViewEditInfo
 	.name-centering-container__char-count-centering-container__name-char-counter {
 		@include m.dead-center;
 
-		font-size: v.$slightly-larger-font-size;
+		font-size: v.$common-slightly-larger-font-size;
 	}
 
 	.item-box__group__field__form-label {
@@ -105,15 +105,15 @@
 		margin-top: 3px;
 		outline: none;
 		border: 1px solid v.$mode-item-view-form-input-border-color-light;
-		border-radius: v.$form-input-border-radius;
+		border-radius: v.$common-form-input-border-radius;
 		background-color: v.$mode-item-view-form-input-background-color-light;
 		padding: 6px;
 		width: 100%;
-		font-size: v.$item-form-input-text-font-size;
+		font-size: v.$common-item-form-input-text-font-size;
 		font-family: Arial, Helvetica, sans-serif;
 
 		&:focus {
-			border-color: v.$default-theme-mode-focus-border-color;
+			border-color: v.$default-theme-common-mode-focus-border-color;
 		}
 	}
 
@@ -125,7 +125,7 @@
 		font-size: 14px;
 
 		&:focus {
-			border-color: v.$default-theme-mode-focus-border-color;
+			border-color: v.$default-theme-common-mode-focus-border-color;
 		}
 	}
 
@@ -135,7 +135,7 @@
 		background-color: v.$mode-item-view-form-input-background-color-light;
 
 		&:focus {
-			border-color: v.$default-theme-mode-focus-border-color;
+			border-color: v.$default-theme-common-mode-focus-border-color;
 		}
 	}
 
@@ -175,7 +175,7 @@
 
 	.backend-errors--item-name {
 		margin: 15px 0px 11px 0px;
-		font-size: v.$slightly-larger-font-size;
+		font-size: v.$common-slightly-larger-font-size;
 	}
 
 	.backend-errors--edit-item {
